[gd_scene load_steps=3 format=3 uid="uid://bosmqyv0utabo"]

[ext_resource type="Theme" uid="uid://c7p7h5j8cckif" path="res://preparePhase/prep_theme.tres" id="1_23pnl"]
[ext_resource type="Script" path="res://preparePhase/home_menu.gd" id="2_18cw5"]

[node name="HomeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_23pnl")
script = ExtResource("2_18cw5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.152941, 0.14902, 0.207843, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -257.0
offset_bottom = 89.0
grow_horizontal = 0
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40

[node name="eCoins" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.909804, 0.819608, 1)
text = "10 eCoins"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.5
offset_top = -119.5
offset_right = 400.5
offset_bottom = 119.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.541176, 0.537255, 0.752941, 1)
text = "Start New Round"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Shelf" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.976471, 0.341176, 0.219608, 1)
text = "Open Shelf"
flat = true

[node name="UpgradeCenter" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.239216, 0.839216, 0.815686, 1)
text = "Open Upgrade 
Center"
flat = true

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_round_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Shelf" to="." method="_on_shelf_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/UpgradeCenter" to="." method="_on_upgrade_center_pressed"]
